# prompt-interp

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
papers/: Untitled  sonar_llm_technical_summary.md
results/: decoder_ce_experiments.json  decoder_ce_experiments.md  generation_test_1.3b.json  generation_test_1.3b.md  generation_test_results.json  generation_test_results.md  lily_story_experiments.json  lily_story_experiments.md  mse_optimization_experiments.json  mse_optimization_experiments.md  multi_init_experiments_20251221_034202.json  multi_init_experiments_20251221_034202.md  optimization_experiments.json  optimization_experiments.md  sonar_llm_1.3b_test.json  sonar_llm_900m_completions.json  sonar_llm_900m_official_inference.json  sonar_llm_completions.json  sonar_llm_examples.json  sonar_llm_examples.md  summarization_1.3b_results.json  summarization_1.3b_results.md
scripts/: analyze_embeddings.py  run_multi_init_experiments.py  test_sonar_llm.py  visualize_feature_results.py
src/prompt_interp/: __init__.py  experiments.py  feature_visualization.py  feature_visualization_meandiff.py  generator.py  model.py  optimize.py  sonar.py  sonar_llm.py
